added branch with prototype of jdk.incubator.vector SIMD support. This was relegated to a branch since as of JDK 17.0.1 the API works but is considerably slower than explicit array access code. If this will improve in the future we can merge it back into master, hopefully without --add-modules. For now we keep it out of master to avoid a JDK 16+ dependency, but the Scala wrapper for Vector<E> seems useful enough to not throw away the sources